web, java backend 1.0.0